# sketch-to-animated-drawing

./: CODESPACE_SETUP.md  CONTRIBUTING.md  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  startup.sh
app/: animator.py  config.py  db.py  main.py  models.py  renderer.py  storage.py  tasks.py  vectorizer.py
frontend/: index.html  package.json
frontend/src/: App.tsx
frontend/src/components/: Header.tsx
frontend/src/lib/: utils.ts
frontend/src/pages/: DownloadPage.tsx  HomePage.tsx  NotFoundPage.tsx  StatusPage.tsx  UploadPage.tsx
frontend/src/services/: api.ts
scripts/: hand_animator.py  setup.sh
tests/: test_health.py  test_vectorizer.py
